:bug: fix: Better letter-spacing in Firefox
Seems like letter-spacing have a different behavior on Firefox. Changed from '4px' to '3px' (only in Firefox).

--- a/src/styles/Bomb.module.css
+++ b/src/styles/Bomb.module.css
@@ -38,6 +38,12 @@
   user-select: none;
 }
 
+@-moz-document url-prefix() {
+  .sevenSeg p {
+    letter-spacing: 3px;
+  }
+}
+
 .reflex {
   clip-path: polygon(0 0, 63% 0, 42% 99%, 0% 100%);
   z-index: 2;
